método indexDesactivados() en  ROLES y CATEGORIAS
